dataset1235/2025-2/610742602/users/603578795/executions/677928262_1462915504.log
== RUN (2025-08-26 21:00:49)
-- CODE: 
from math import *
L= float(input("insira o lado:"))

Ar= L* A * 5/ 2
A= L /(2*tan(pi/5)
           
print(round(A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    A= L /(2*tan(pi/5)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    A= L /(2*tan(pi/5)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    A= L /(2*tan(pi/5)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    A= L /(2*tan(pi/5)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    A= L /(2*tan(pi/5)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    A= L /(2*tan(pi/5)
          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:00:38)
-- CODE: 
from math import *
L= float(input("insira o lado:"))

Ar= L* A * 5/ 2
A= L/(2.tan(pi/5)
           
print(round(A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    A= L/(2.tan(pi/5)
           ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    A= L/(2.tan(pi/5)
           ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    A= L/(2.tan(pi/5)
           ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    A= L/(2.tan(pi/5)
           ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    A= L/(2.tan(pi/5)
           ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    A= L/(2.tan(pi/5)
           ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:02:12)
-- CODE: 
from math import *
L= float(input("insira o lado:"))

Ar= (L * L /(2*tan(pi/5)) * 5)/ 2
           
print(round(Ar,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
insira o lado:139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
insira o lado:61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
insira o lado:208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
insira o lado:110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
insira o lado:27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
insira o lado:172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:59:32)
-- CODE: 
from math import *
L= float(input("insira o lado:"))

A= L*5 *(L/2.tan(pi/5)) / 2
print(round(A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    A= L*5 *(L/2.tan(pi/5)) / 2
                ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    A= L*5 *(L/2.tan(pi/5)) / 2
                ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    A= L*5 *(L/2.tan(pi/5)) / 2
                ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    A= L*5 *(L/2.tan(pi/5)) / 2
                ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    A= L*5 *(L/2.tan(pi/5)) / 2
                ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    A= L*5 *(L/2.tan(pi/5)) / 2
                ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:01:31)
-- CODE: 
from math import *
L= float(input("insira o lado:"))

Ar= (L * A * 5)/ 2
A= L /(2*tan(pi/5))
           
print(round(Ar,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Ar= (L * A * 5)/ 2
             ^
NameError: name 'A' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Ar= (L * A * 5)/ 2
             ^
NameError: name 'A' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Ar= (L * A * 5)/ 2
             ^
NameError: name 'A' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Ar= (L * A * 5)/ 2
             ^
NameError: name 'A' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Ar= (L * A * 5)/ 2
             ^
NameError: name 'A' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Ar= (L * A * 5)/ 2
             ^
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:00:37)
-- CODE: 
from math import *
L= float(input("insira o lado:"))

Ar= L* A * 5/ 2
A= L/(2.tan(pi/5)
           
print(round(A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    A= L/(2.tan(pi/5)
           ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    A= L/(2.tan(pi/5)
           ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    A= L/(2.tan(pi/5)
           ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    A= L/(2.tan(pi/5)
           ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    A= L/(2.tan(pi/5)
           ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    A= L/(2.tan(pi/5)
           ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:01:09)
-- CODE: 
from math import *
L= float(input("insira o lado:"))

Ar= L* A * 5/ 2
A= L /(2*tan(pi/5))
           
print(round(A,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Ar= L* A * 5/ 2
           ^
NameError: name 'A' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Ar= L* A * 5/ 2
           ^
NameError: name 'A' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Ar= L* A * 5/ 2
           ^
NameError: name 'A' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Ar= L* A * 5/ 2
           ^
NameError: name 'A' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Ar= L* A * 5/ 2
           ^
NameError: name 'A' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Ar= L* A * 5/ 2
           ^
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:02:04)
-- CODE: 
from math import *
L= float(input("insira o lado:"))

Ar= (L * L /(2*tan(pi/5)) * 5)/ 2
           
print(round(Ar,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
insira o lado:139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
insira o lado:61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
insira o lado:208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
insira o lado:110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
insira o lado:27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
insira o lado:172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
